--- a/Memoria/conclusiones.tex
+++ b/Memoria/conclusiones.tex
@@ -1,4 +1,4 @@
-\chapter{Conclusiones y trabajos futuros (5\%)}
+\chapter{Conclusiones y trabajos futuros}
 
 Resumen de los logros principales conseguidos, destacando:
 
